k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paradise-bakes-cafe
  labels:
    name: paradise-bakes-cafe
    environment: production
